# typeDSL

./: CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-typedsl.yml
docs/: type-checker-plan.md
examples/: 01_calculator.py  02_adapting_existing_ast.py  03_node_signatures.py  README.md  __init__.py  dpm_xl_lazy_polars.py
ezdsl/src/ezdsl/: __init__.py  core.py  nodes.py  types.py
ezdsl/tests/: test_custom_types.py  test_types.py
src/nanodsl/: __init__.py  adapters.py  ast.py  nodes.py  schema.py  serialization.py  types.py
src/typedsl/: __init__.py  adapters.py  ast.py  codecs.py  nodes.py  schema.py  serialization.py  type_checker.py  typecheck.py  types.py
src/typedsl/checker/: __init__.py  constraints.py  convert.py  errors.py  generator.py  solver.py  types.py  unifier.py
src/typedsl/formats/: __init__.py  json.py
src/typedsl/typechecker/: __init__.py  core.py  generate.py  operations.py  solver.py
tests/: test_adapters.py  test_ast.py  test_checker.py  test_codecs.py  test_custom_types.py  test_dpm_xl.py  test_integration.py  test_nodes.py  test_schema.py  test_serialization.py  test_signature.py  test_type_checker.py  test_typecheck.py  test_typechecker.py  test_types.py
tutorial/: GETTING_STARTED.md  TYPE_PARAMETERS.md
