[project]
name = "typeDSL"
version = "0.1.0"
description = "A type-safe node system for building ASTs and DSLs in Python 3.12+"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Jim Lundin", email = "JimLundin@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []
keywords = [
    "ast",
    "dsl",
    "nodes",
    "type-safe",
    "serialization",
    "schema",
    "parser",
    "compiler",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/JimLundin/typeDSL"
Repository = "https://github.com/JimLundin/typeDSL"
Issues = "https://github.com/JimLundin/typeDSL/issues"
Documentation = "https://github.com/JimLundin/typeDSL#readme"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.19.0", "pyright>=1.1.407", "pytest>=9.0.1", "ruff>=0.14.7"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src/typedsl"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryIsInstance = "warning"  # Defensive checks for invalid inputs are fine

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    "D203",  # incompatible with D211
    "D213",  # incompatible with D212
]

[tool.ruff.lint.per-file-ignores]
# Tests: allow asserts, magic values, and code-like comments (explanatory examples)
"tests/**" = ["S101", "PLR2004", "ERA001"]
# Type manipulation code legitimately requires Any for runtime type introspection
"src/typedsl/schema.py" = [
    "ANN401",   # Any required for extract_type(py_type: Any)
    "C901",     # extract_type is a type dispatch function, complexity is inherent
    "PLR0911",  # multiple returns needed for type dispatch
    "PLR0912",  # multiple branches needed for type dispatch
]
"src/typedsl/nodes.py" = ["ANN401"]  # __init_subclass__ accepts arbitrary **kwargs
"src/typedsl/types.py" = ["ANN401"]  # substitute_type_params handles arbitrary type expressions
"src/typedsl/adapters.py" = ["ANN401"]  # serialization handles arbitrary values
